# dapla-team-keycloak-protocol-mapper

./: .cruft.json  Makefile  README.md  SECURITY.md  pom.xml  pyproject.toml
.github/workflows/: build.yml  release-drafter.yml  release.yml
localstack/: .env-example  .gitignore  README.md  docker-compose.yml
localstack/init-scripts/: install-custom-providers.sh
src/main/java/no/ssb/dapla/keycloak/: BuildInfo.java  DaplaKeycloakException.java  Env.java
src/main/java/no/ssb/dapla/keycloak/mappers/: AbstractTokenMapper.java  ConfigPropertyBuilder.java  ConfigPropertyKey.java  ConfigPropertyType.java  CouldNotDeduceClaimException.java
src/main/java/no/ssb/dapla/keycloak/mappers/daplauserinfo/: DaplaUserInfoClaimFormatter.java  DaplaUserInfoMapper.java  GroupSuffixFilter.java
src/main/java/no/ssb/dapla/keycloak/mappers/shortname/: ShortUsernameMapper.java
src/main/java/no/ssb/dapla/keycloak/mappers/teams/: TeamsMapper.java
src/main/java/no/ssb/dapla/keycloak/services/teamapi/: DaplaTeamApiService.java  DefaultDaplaTeamApiService.java  DummyDaplaTeamApiService.java  MockyDaplaTeamApiService.java
src/main/java/no/ssb/dapla/keycloak/utils/: Converter.java  Email.java  Env.java  HalFlattener.java  Jq.java  Json.java
src/test/java/no/ssb/dapla/keycloak/: BuildInfoTest.java  MockyDaplaTeamApiServiceIT.java  NoDuplicateMapperTest.java
src/test/java/no/ssb/dapla/keycloak/mappers/daplauserinfo/: DaplaUseInfoMapperIT.java  (+2 more)
src/test/java/no/ssb/dapla/keycloak/utils/: ConverterTest.java  EmailTest.java  HalFlattenerTest.java  JqTest.java  JsonTest.java
(+3 files in other folders)
