[tool.poetry]
name = "dapla-team-keycloak-protocol-mapper"
version = "0.1.0"
description = "Dapla Team Protocol Mapper for Keycloak"
authors = ["mmwinther <mmw@ssb.no>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4"
dapla-toolbelt = ">=1.3.2"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.1.3"
ipykernel = ">=6.15.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
